# ToDoListConsoleApplication

./: .gitignore  CMakeLists.txt  README.md  ToDoListConsoleApplication.sln  main.cpp
Command/: AddToDoCommand.cpp  AddToDoCommand.h  CMakeLists.txt  Command.cpp  Command.h  DeleteToDoCommand.cpp  DeleteToDoCommand.h  MarkToDoCommand.cpp  MarkToDoCommand.h  ModifyToDoCommand.cpp  ModifyToDoCommand.h  UndoRedo.cpp  UndoRedo.h
CommandTest/: CMakeLists.txt
Tests/: CMakeLists.txt
Tests/CommandTest/: AddToDoCommandTest.cpp  CMakeLists.txt  CommandTest.h  DeleteToDoCommandTest.cpp  MarkToDoCommandTest.cpp  ModifyToDoCommandTest.cpp  UndoRedoTest.cpp
Tests/ToDoListTest/: CMakeLists.txt  MainFrameTest.cpp  ReadFromFileTest.cpp  ToDoTest.cpp  WriteToFileTest.cpp
Tests/ToDoListTest/test_src/main_frame/: exception.txt  taking_param_2.txt
Tests/ToDoListTest/test_src/read_from_file/: get_lines_2.txt  test2.txt  test3.txt
Tests/ToDoListTest/test_src/write_to_file/: get_lines_1.txt  modify_file_2.txt  modify_test_invalid.txt  modify_test_multi.txt  modify_test_single.txt
ToDoList/: CMakeLists.txt  MainFrame.cpp  MainFrame.h  ReadFromFile.cpp  ReadFromFile.h  ToDo.h  WriteToFile.cpp  WriteToFile.h
ToDoListConsoleApplication/: ReadFromFile.cpp  ReadFromFile.h  ReadFromFileTest.cpp  ToDo.h  ToDoListConsoleApplication.vcxproj  ToDoListConsoleApplication.vcxproj.filters  main.cpp
ToDoListTest/: CMakeLists.txt  MainFrameTest.cpp  ReadFromFileTest.cpp  ToDoListTest.vcxproj  ToDoTest.cpp  WriteToFileTest.cpp  test1.txt
ToDoListTest/test_src/main_frame/: taking_param_1.txt
ToDoListTest/test_src/write_to_file/: add_todo_test_not_empty.txt  delete_todo_test_complex.txt  delete_todo_test_simple.txt  mark_as_done_invalid.txt  mark_as_done_test.txt
uml_diagrams/: .$ToDoListConsoleApplication.drawio.bkp  ToDoListConsoleApplication.drawio  use_cases_list.xlsx
